--- a/Utilities/otbossim/src/ossim/CMakeLists.txt
+++ b/Utilities/otbossim/src/ossim/CMakeLists.txt
@@ -51,10 +51,16 @@ IF(WIN32)
   ENDIF(NOT BORLAND)
 ENDIF(WIN32)
 
+FIND_PROGRAM( VERSION_CONFIG_PATH
+		   NAMES version-config 
+		   PATHS ${OTB_BINARY_DIR}/bin
+		   NO_DEFAULT_PATH )
+
 ADD_CUSTOM_COMMAND(
   OUTPUT ${OTB_BINARY_DIR}/Utilities/otbossim/include/ossim/ossimVersion.h
   DEPENDS version-config
-  COMMAND ${OTB_BINARY_DIR}/bin/version-config
+  #COMMAND ${OTB_BINARY_DIR}/bin/version-config
+  COMMAND ${VERSION_CONFIG_PATH}
   ARGS "${OTB_BINARY_DIR}/Utilities/otbossim/include/ossim/ossimVersion.h" "${OSSIM_VERSION}"
   COMMENT "Generating ossimVersion.h"
   )
