--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -436,12 +436,14 @@ ADD_TEST(ioTvImageFileReaderRGB_PNG2ENVI ${IO_TESTS3}
         ${INPUTDATA}/couleurs_extrait.png
         ${TEMP}/ioImageFileReaderRGB_PNG2ENVI.hdr )
 
-ADD_TEST(ioTvCheckReadPNGIndexee ${IO_TESTS3}
-  --compare-image ${TOL}        ${INPUTDATA}/sbuv_indexee.png
-                                ${TEMP}/ioImageFileReaderRGB_PNGIndexee2TIF.tif
-        otbImageFileReaderRGBTest
-        ${INPUTDATA}/sbuv_indexee.png
-        ${TEMP}/ioImageFileReaderRGB_PNGIndexee2TIF.tif )
+# FIXME Desactivated until http://bugs.orfeo-toolbox.org/view.php?id=103
+# is solved
+# ADD_TEST(ioTvCheckReadPNGIndexee ${IO_TESTS3}
+#   --compare-image ${TOL}        ${INPUTDATA}/sbuv_indexee.png
+#                                 ${TEMP}/ioImageFileReaderRGB_PNGIndexee2TIF.tif
+#         otbImageFileReaderRGBTest
+#         ${INPUTDATA}/sbuv_indexee.png
+#         ${TEMP}/ioImageFileReaderRGB_PNGIndexee2TIF.tif )
 
 
 # --- Image I2
@@ -1589,10 +1591,12 @@ ENDIF(OTB_DATA_USE_LARGEINPUT)
 
 
 # ---  JPEG2000 can write ---
-ADD_TEST(ioTuJPEG2000ImageIOCanWrite ${IO_TESTS13}
-         otbJPEG2000ImageIOTestCanWrite
-         ${TEMP}/toto.j2k
-         )
+# FIXME Desactivated until http://bugs.orfeo-toolbox.org/view.php?id=104
+# is solved
+# ADD_TEST(ioTuJPEG2000ImageIOCanWrite ${IO_TESTS13}
+#          otbJPEG2000ImageIOTestCanWrite
+#          ${TEMP}/toto.j2k
+#          )
 
 ENDIF(OTB_COMPILE_JPEG2000)
 
