COMP: wrong file name for exclusion in CMakeLists

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -7,7 +7,7 @@ IF( NOT OTB_USE_MAPNIK )
 ENDIF( NOT OTB_USE_MAPNIK )
 
 IF( NOT OTB_USE_PQXX )
-    LIST(REMOVE_ITEM OTBCommon_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbGISConnection.cxx" )
+    LIST(REMOVE_ITEM OTBCommon_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbPostGISConnectionImplementation.cxx" )
 ENDIF( NOT OTB_USE_PQXX )
 
 
