ENH: added directori for GIS filters and fucntions

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -18,3 +18,7 @@ SARPolarimetry
 IF(OTB_USE_VISU_GUI)
         SUBDIRS(Visu Gui Visualization)
 ENDIF(OTB_USE_VISU_GUI)
+
+IF(OTB_USE_PQXX)
+        SUBDIRS(GISFilters)
+ENDIF(OTB_USE_PQXX)
